--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,42 @@ html, body {
     background-color: #f5f5f5;
 }
 
+.quote {
+    display:inline-block;
+    margin:1em;
+    overflow:hidden;
+    blockquote {
+      background-color: #fff;
+      border: solid 2px #757575;
+      display: inline-block;
+      margin: 0;
+      padding: 1em;
+      position: relative;
+      &:before {
+        background-color: #fff;
+        bottom: -10%;
+        content: "";
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: -10%;
+        transform: rotate(-15deg) skew(5deg);
+      }
+      cite {
+        display: block;
+        font-style: italic;
+        text-align: right;
+        &:before {
+          content: "- ";
+        }
+      }
+      > * {
+        position: relative;
+        z-index: 1;
+      }
+    }
+  }
+
 .container {
     display: flex;
     flex-direction: column;
@@ -19,6 +55,21 @@ html, body {
 /* Header */
 .header {
     background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+    color: white;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+.preheader {
+    background: linear-gradient(135deg, #FF671F 0%, #fff 100%);
+    color: white;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.postheader {
+    background: linear-gradient(135deg, #046A38 0%, #fff 100%);
     color: white;
     padding: 20px;
     text-align: center;
@@ -46,7 +97,7 @@ html, body {
 
 /* Left Panel */
 .left-panel {
-    flex: 0 0 80%;
+    flex: 0 0 75%;
     display: flex;
     flex-direction: column;
     background: white;
@@ -171,7 +222,7 @@ html, body {
 
 /* Right Panel */
 .right-panel {
-    flex: 0 0 20%;
+    flex: 0 0 25%;
     background: white;
     border-left: 1px solid #e0e0e0;
     overflow-y: auto;
@@ -354,4 +405,5 @@ html, body {
         font-size: 10px;
         padding: 10px;
     }
+    
 }
